package org.opensbpm.oswd.model

import org.opensbpm.oswd.AttributeType

class Attribute {
    String name
    AttributeType type
    boolean readOnly
    boolean mandatory

}
