package org.opensbpm.oswd.model

class Message {
    String object
    String proceedTo
}
