package org.opensbpm.oswd;

public interface BusinessObject extends HasName{
}
