package org.opensbpm.oswd;

public interface ReceiveTask extends Task {
}
