package org.opensbpm.oswd;

public interface SendTask extends Task {
}
