package org.opensbpm.oswd;

public interface ShowTask extends Task {
}
